# editor

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: buffer.rs  config.rs  lib.rs  logger.rs  lsp.rs  main.rs  syntax.rs  term.rs  ui.rs
src/buffer/: edit.rs  highlight.rs  motion.rs  storage.rs  units.rs
src/lsp/: protocol.rs
src/term/: input.rs
src/ui/: color.rs  screen.rs
tree-sitter-languages/: Cargo.toml  build.rs
