[package]
name = "editor"
version = "0.1.0"
authors = ["Andy Russell <arussell123@gmail.com>"]
edition = "2018"

[workspace]
members = ["tree-sitter-languages"]

[dependencies]
anyhow = "1.0.28"
assert_matches = "1.3.0"
atoi = "0.3.2"
backtrace = "0.3.48"
bytes = "1.0.1"
env_logger = { version = "0.7.1", default-features = false }
euclid = "0.20.11"
futures = "0.3.4"
httparse = "1.3.4"
itertools = "0.9.0"
lazy_static = "1.4.0"
libc = "0.2.69"
log = { version = "0.4.8", features = ["std"] }
lsp-types = "0.74.1"
maplit = "1.0.2"
nix = "0.17.0"
pin-project = "0.4.13"
qp-trie = "0.7.5"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
structopt = "0.3.14"
strum = { version = "0.18.0", features = ["derive"] }
terminfo = "0.7.2"
thiserror = "1.0.16"
tokio-util = { version = "0.6.5", features = ["codec"] }
toml = "0.5.6"
tree-sitter = "0.16.1"
tree-sitter-languages = { path = "tree-sitter-languages" }
if_chain = "1.0.1"

[dependencies.tokio]
version = "1.4.0"
features = ["rt", "fs", "io-util", "macros", "process", "signal"]

[dependencies.tokio-stream]
version = "0.1.5"
features = ["io-util", "signal"]

[dev-dependencies]
indoc = "0.3.5"
maplit = "1.0.2"
tempfile = "3.1.0"
